# perfect-jupyter

./: .gitignore  Perfect.ipynb  README.md  locked-requirements.txt  pyproject.toml  requirement.txt  requirements.txt
docs/: README.md
