[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "perfect-jupyter"
version = "0.1.0"
description = "Perfect Jupyter"
authors = ["Oleksis Fraga <oleksis.fraga@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/oleksis/perfect-jupyter"
keywords = ["music", "poetry", "playlist", "youtube"]

[tool.poetry.dependencies]
python = "^3.8"
fqdn = "1.5.1"
ipywidgets = "7.7.1"
isoduration = "20.11.0"
jsonpointer = "2.4"
jupyter-contrib-nbextensions = "0.7.0"
uri-template = "1.3.0"
webcolors = "1.13"
yt-dlp = "2024.3.10"

[tool.poetry.dev-dependencies]
